Fix: scrollbar issue with virtual scroll

--- a/src/app/components/table/table.css
+++ b/src/app/components/table/table.css
@@ -83,8 +83,12 @@
     position: sticky;
 }
 
-.p-datatable-scrollable > .p-datatable-wrapper > .p-datatable-table.p-datatable-virtual-scroll > .p-datatable-thead {
+.p-datatable-scrollable > .p-datatable-wrapper.p-datatable-virtual-scroll > .p-datatable-table > .p-datatable-thead {
     position: relative;
+}
+
+.p-datatable-scrollable > .p-datatable-wrapper.p-datatable-virtual-scroll {
+    overflow: hidden;
 }
 
 .p-datatable-scrollable > .p-datatable-wrapper > .p-datatable-table > .p-datatable-frozen-tbody {
